--- a/docker-compose-postgresML.yml
+++ b/docker-compose-postgresML.yml
@@ -9,7 +9,7 @@ services:
       - "5433:5433"
       - "8000:8000"
     environment:
-      POSTGRES_DB: **DATABASE_NAME
+      POSTGRES_DB: *DATABASE_NAME*
       POSTGRES_USER: *USERNAME*
       POSTGRES_PASSWORD: *PASSWORD*
     volumes:
